--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -49,7 +49,7 @@
     "prettier": "catalog:",
     "tailwindcss": "catalog:tailwind",
     "typescript": "catalog:",
-    "vite": "npm:rolldown-vite@7.1.14",
+    "vite": "7.2.2",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "peerDependencies": {
