--- a/packages/uploadthing/package.json
+++ b/packages/uploadthing/package.json
@@ -7,6 +7,7 @@
   "exports": {
     ".": "./dist/index.mjs",
     "./config": "./dist/config.mjs",
+    "./react": "./dist/react.mjs",
     "./package.json": "./package.json"
   },
   "scripts": {
@@ -16,6 +17,7 @@
     "~dev": "tsdown --watch ./src"
   },
   "dependencies": {
+    "@uploadthing/react": "catalog:uploadthing",
     "@yukinu/auth": "workspace:*",
     "@yukinu/validators": "workspace:*",
     "uploadthing": "catalog:uploadthing"
