--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -11,9 +11,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^7.10.0",
+    "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.10.0",
+    "@react-navigation/native-stack": "^7.10.1",
     "@tanstack/react-query": "catalog:prod",
     "@trpc/client": "catalog:trpc",
     "@trpc/tanstack-react-query": "catalog:trpc",
@@ -23,18 +23,18 @@
     "@yukinu/ui": "workspace:*",
     "@yukinu/uploadthing": "workspace:*",
     "@yukinu/validators": "workspace:*",
-    "expo": "~54.0.31",
+    "expo": "~54.0.32",
     "expo-constants": "^18.0.13",
     "expo-document-picker": "~14.0.8",
-    "expo-font": "~14.0.10",
+    "expo-font": "~14.0.11",
     "expo-image-picker": "^17.0.10",
     "expo-linking": "~8.0.11",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "^31.0.13",
     "expo-system-ui": "^6.0.9",
     "lucide-react-native": "^0.562.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "catalog:react",
+    "react-dom": "catalog:react",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
